@@ -222,7 +222,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     }
     String stringData =
         data != null && data.length > 0 ? new String(data, StandardCharsets.UTF_8) : "";
-    rsp.getValues().addAll(Collections.singletonMap(file, stringData));
+    rsp.getValues().addAll(Map.of(file, stringData));
   }
 
   @EndPoint(method = POST, path = "/schema-designer/file", permission = CONFIG_EDIT_PERM)
@@ -358,16 +358,14 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
   public void listCollectionsForConfig(SolrQueryRequest req, SolrQueryResponse rsp) {
     final String configSet = getRequiredParam(CONFIG_SET_PARAM, req);
     rsp.getValues()
-        .addAll(
-            Collections.singletonMap(
-                "collections", configSetHelper.listCollectionsForConfig(configSet)));
+        .addAll(Map.of("collections", configSetHelper.listCollectionsForConfig(configSet)));
   }
 
   // CONFIG_EDIT_PERM is required here since this endpoint is used by the UI to determine if the
   // user has access to the Schema Designer UI
   @EndPoint(method = GET, path = "/schema-designer/configs", permission = CONFIG_EDIT_PERM)
   public void listConfigs(SolrQueryRequest req, SolrQueryResponse rsp) throws IOException {
-    rsp.getValues().addAll(Collections.singletonMap("configSets", listEnabledConfigs()));
+    rsp.getValues().addAll(Map.of("configSets", listEnabledConfigs()));
   }
 
   protected Map<String, Integer> listEnabledConfigs() throws IOException {
