@@ -17,8 +17,6 @@
 
 package org.apache.solr.packagemanager;
 
-import static org.apache.solr.cli.SolrCLI.printGreen;
-import static org.apache.solr.cli.SolrCLI.printRed;
 import static org.apache.solr.packagemanager.PackageUtils.getMapper;
 
 import com.jayway.jsonpath.InvalidPathException;
@@ -30,7 +28,6 @@ import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -109,7 +106,7 @@ public class PackageManager implements Closeable {
       throws IOException, SolrServerException {
     SolrPackageInstance packageInstance = getPackageInstance(packageName, version);
     if (packageInstance == null) {
-      printRed(
+      runtime.printError(
           "Package "
               + packageName
               + ":"
@@ -122,7 +119,7 @@ public class PackageManager implements Closeable {
     Map<String, String> collectionsDeployedOn = getDeployedCollections(packageName);
     for (String collection : collectionsDeployedOn.keySet()) {
       if (version.equals(collectionsDeployedOn.get(collection))) {
-        printRed(
+        runtime.printError(
             "Package "
                 + packageName
                 + " is currently deployed on collection: "
@@ -139,7 +136,7 @@ public class PackageManager implements Closeable {
       SolrPackageInstance clusterPackageInstance = clusterPackages.get(clusterPackageName);
       if (packageName.equals(clusterPackageName)
           && version.equals(clusterPackageInstance.version)) {
-        printRed(
+        runtime.printError(
             "Package "
                 + packageName
                 + "is currently deployed as a cluster-level plugin ("
@@ -151,7 +148,7 @@ public class PackageManager implements Closeable {
 
     // Delete the package by calling the Package API and remove the Jar
 
-    printGreen("Executing Package API to remove this package...");
+    runtime.printSuccess("Executing Package API to remove this package...");
     PackagePayload.DelVersion del = new PackagePayload.DelVersion();
     del.version = version;
     del.pkg = packageName;
@@ -160,17 +157,18 @@ public class PackageManager implements Closeable {
         new V2Request.Builder(PackageUtils.PACKAGE_PATH)
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("delete", del))
+            .withPayload(Map.of("delete", del))
             .build();
 
     try {
       V2Response resp = req.process(solrClient);
-      printGreen("Response: " + resp.jsonStr());
+      runtime.printSuccess("Response: " + resp.jsonStr());
     } catch (SolrServerException | IOException e) {
       throw new SolrException(ErrorCode.BAD_REQUEST, e);
     }
 
-    printGreen("Executing Package Store API to remove the " + packageName + " package...");
+    runtime.printSuccess(
+        "Executing Package Store API to remove the " + packageName + " package...");
 
     List<String> filesToDelete = new ArrayList<>(packageInstance.files);
     filesToDelete.add(
@@ -178,11 +176,11 @@ public class PackageManager implements Closeable {
     for (String filePath : filesToDelete) {
       DistribFileStore.deleteZKFileEntry(zkClient, filePath);
       String path = "/api/cluster/filestore/files" + filePath;
-      printGreen("Deleting " + path);
+      runtime.printSuccess("Deleting " + path);
       solrClient.request(new GenericSolrRequest(SolrRequest.METHOD.DELETE, path));
     }
 
-    printGreen("Package uninstalled: " + packageName + ":" + version + ":-)");
+    runtime.printSuccess("Package uninstalled: " + packageName + ":" + version + ":-)");
   }
 
   public List<SolrPackageInstance> fetchInstalledPackageInstances() throws SolrException {
@@ -370,7 +368,7 @@ public class PackageManager implements Closeable {
     boolean verifySuccess =
         verify(packageInstance, deployedCollections, shouldDeployClusterPlugins, overrides);
     if (verifySuccess) {
-      printGreen(
+      runtime.printSuccess(
           "Deployed on "
               + deployedCollections
               + " and verified package: "
@@ -399,13 +397,13 @@ public class PackageManager implements Closeable {
           getPackagesDeployed(collection).get(packageInstance.name);
       if (packageInstance.equals(deployedPackage)) {
         if (!pegToLatest) {
-          printRed("Package " + packageInstance + " already deployed on " + collection);
+          runtime.printError("Package " + packageInstance + " already deployed on " + collection);
           previouslyDeployed.add(collection);
           continue;
         }
       } else {
         if (deployedPackage != null && !isUpdate) {
-          printRed(
+          runtime.printError(
               "Package "
                   + deployedPackage
                   + " already deployed on "
@@ -438,12 +436,11 @@ public class PackageManager implements Closeable {
             PackageUtils.getCollectionParamsPath(collection),
             getMapper()
                 .writeValueAsString(
-                    Collections.singletonMap(
+                    Map.of(
                         packageParamsExist ? "update" : "set",
-                        Collections.singletonMap(
+                        Map.of(
                             "packages",
-                            Collections.singletonMap(
-                                packageInstance.name, collectionParameterOverrides)))));
+                            Map.of(packageInstance.name, collectionParameterOverrides)))));
       } catch (Exception e) {
         throw new SolrException(ErrorCode.SERVER_ERROR, e);
       }
@@ -505,7 +502,7 @@ public class PackageManager implements Closeable {
                         packageInstance.parameterDefaults,
                         collectionParameterOverrides,
                         systemParams);
-                printGreen("Executing " + payload + " for path:" + path);
+                runtime.printSuccess("Executing " + payload + " for path:" + path);
                 boolean shouldExecute = prompt(noprompt);
                 if (shouldExecute) {
                   SolrCLI.postJsonToSolr(solrClient, path, payload);
@@ -518,7 +515,7 @@ public class PackageManager implements Closeable {
                   ErrorCode.BAD_REQUEST, "Non-POST method not supported for setup commands");
             }
           } else {
-            printRed("There is no setup command to execute for plugin: " + plugin.name);
+            runtime.printError("There is no setup command to execute for plugin: " + plugin.name);
           }
         }
       }
@@ -539,7 +536,7 @@ public class PackageManager implements Closeable {
     }
 
     if (!previouslyDeployed.isEmpty()) {
-      printRed(
+      runtime.printError(
           "Already Deployed on "
               + previouslyDeployed
               + ", package: "
@@ -567,7 +564,7 @@ public class PackageManager implements Closeable {
         SolrPackageInstance deployedPackage =
             getPackagesDeployedAsClusterLevelPlugins().get(packageInstance.name);
         if (deployedPackage == null) {
-          printRed(
+          runtime.printError(
               "Cluster level plugin "
                   + plugin.name
                   + " from package "
@@ -577,12 +574,13 @@ public class PackageManager implements Closeable {
           continue;
         }
         for (PluginMeta pluginMeta : (List<PluginMeta>) deployedPackage.getCustomData()) {
-          printGreen("Updating this plugin: " + pluginMeta);
+          runtime.printSuccess("Updating this plugin: " + pluginMeta);
           try {
             // just update the version, let the other metadata same
             pluginMeta.version = packageInstance.version;
             String postBody = "{\"update\": " + Utils.toJSONString(pluginMeta) + "}";
-            printGreen("Posting " + postBody + " to " + PackageUtils.CLUSTER_PLUGINS_PATH);
+            runtime.printSuccess(
+                "Posting " + postBody + " to " + PackageUtils.CLUSTER_PLUGINS_PATH);
             SolrCLI.postJsonToSolr(solrClient, PackageUtils.CLUSTER_PLUGINS_PATH, postBody);
           } catch (Exception e) {
             throw new SolrException(ErrorCode.SERVER_ERROR, e);
@@ -591,9 +589,9 @@ public class PackageManager implements Closeable {
         numberOfClusterPluginsDeployed++;
       }
       if (numberOfClusterPluginsDeployed > 0) {
-        printGreen(numberOfClusterPluginsDeployed + " cluster level plugins updated.");
+        runtime.printSuccess(numberOfClusterPluginsDeployed + " cluster level plugins updated.");
       } else {
-        printRed("No cluster level plugin updated.");
+        runtime.printError("No cluster level plugin updated.");
         clusterPluginFailed = true;
       }
     } else {
@@ -616,7 +614,7 @@ public class PackageManager implements Closeable {
                 ((Map<String, Object>) clusterprops.getOrDefault("plugin", Map.of()))
                     .get(packageInstance.name + ":" + plugin.name);
             if (pkg != null) {
-              printRed(
+              runtime.printError(
                   "Cluster level plugin "
                       + plugin.name
                       + " from package "
@@ -653,7 +651,7 @@ public class PackageManager implements Closeable {
               String path =
                   PackageUtils.resolve(
                       cmd.path, packageInstance.parameterDefaults, overridesMap, systemParams);
-              printGreen("Executing " + payload + " for path:" + path);
+              runtime.printSuccess("Executing " + payload + " for path:" + path);
               boolean shouldExecute = prompt(noprompt);
               if (shouldExecute) {
                 SolrCLI.postJsonToSolr(solrClient, path, payload);
@@ -667,13 +665,13 @@ public class PackageManager implements Closeable {
                 ErrorCode.BAD_REQUEST, "Non-POST method not supported for setup commands");
           }
         } else {
-          printRed("There is no setup command to execute for plugin: " + plugin.name);
+          runtime.printError("There is no setup command to execute for plugin: " + plugin.name);
         }
       }
       if (numberOfClusterPluginsDeployed > 0) {
-        printGreen(numberOfClusterPluginsDeployed + " cluster level plugins setup.");
+        runtime.printSuccess(numberOfClusterPluginsDeployed + " cluster level plugins setup.");
       } else {
-        printRed("No cluster level plugin setup.");
+        runtime.printError("No cluster level plugin setup.");
         clusterPluginFailed = true;
       }
     }
@@ -683,14 +681,15 @@ public class PackageManager implements Closeable {
   private boolean prompt(boolean noprompt) {
     boolean shouldExecute = true;
     if (!noprompt) { // show a prompt asking user to execute the setup command for the plugin
-      PackageUtils.print(
-          CLIUtils.YELLOW,
-          "Execute this command. (If you choose no, you can manually deploy/undeploy this plugin later) (y/n): ");
+      runtime.print(
+          CLIUtils.YELLOW
+              + "Execute this command. (If you choose no, you can manually deploy/undeploy this plugin later) (y/n): "
+              + CLIUtils.RESET);
       try (Scanner scanner = new Scanner(System.in, StandardCharsets.UTF_8)) {
         String userInput = scanner.next();
         if ("no".trim().equalsIgnoreCase(userInput) || "n".trim().equalsIgnoreCase(userInput)) {
           shouldExecute = false;
-          printRed(
+          runtime.printError(
               "Skipping setup command for deploying (deployment verification may fail)."
                   + " Please run this step manually or refer to package documentation.");
         }
@@ -773,13 +772,13 @@ public class PackageManager implements Closeable {
                   plugin.name);
           String path =
               PackageUtils.resolve(cmd.path, pkg.parameterDefaults, overridesMap, systemParams);
-          printGreen("Executing " + solrUrl + path + " for cluster level plugin");
+          runtime.printSuccess("Executing " + solrUrl + path + " for cluster level plugin");
 
           if ("GET".equalsIgnoreCase(cmd.method)) {
             String response =
                 PackageUtils.getJsonStringFromNonCollectionApi(
                     solrClient, path, new ModifiableSolrParams());
-            printGreen(response);
+            runtime.printSuccess(response);
             String actualValue = null;
             try {
               String jsonPath =
@@ -787,16 +786,16 @@ public class PackageManager implements Closeable {
                       cmd.condition, pkg.parameterDefaults, overridesMap, systemParams);
               actualValue = jsonPathRead(response, jsonPath);
             } catch (PathNotFoundException ex) {
-              printRed("Failed to deploy plugin: " + plugin.name);
+              runtime.printError("Failed to deploy plugin: " + plugin.name);
               success = false;
             }
             if (actualValue != null) {
               String expectedValue =
                   PackageUtils.resolve(
                       cmd.expected, pkg.parameterDefaults, overridesMap, systemParams);
-              printGreen("Actual: " + actualValue + ", expected: " + expectedValue);
+              runtime.printSuccess("Actual: " + actualValue + ", expected: " + expectedValue);
               if (!expectedValue.equals(actualValue)) {
-                printRed("Failed to deploy plugin: " + plugin.name);
+                runtime.printError("Failed to deploy plugin: " + plugin.name);
                 success = false;
               }
             }
@@ -823,13 +822,13 @@ public class PackageManager implements Closeable {
             String path =
                 PackageUtils.resolve(
                     cmd.path, pkg.parameterDefaults, collectionParameterOverrides, systemParams);
-            printGreen("Executing " + solrUrl + path + " for collection:" + collection);
+            runtime.printSuccess("Executing " + solrUrl + path + " for collection:" + collection);
 
             if ("GET".equalsIgnoreCase(cmd.method)) {
               String response =
                   PackageUtils.getJsonStringFromCollectionApi(
                       solrClient, path, new ModifiableSolrParams());
-              printGreen(response);
+              runtime.printSuccess(response);
               String actualValue = null;
               try {
                 String jsonPath =
@@ -840,7 +839,7 @@ public class PackageManager implements Closeable {
                         systemParams);
                 actualValue = jsonPathRead(response, jsonPath);
               } catch (PathNotFoundException ex) {
-                printRed("Failed to deploy plugin: " + plugin.name);
+                runtime.printError("Failed to deploy plugin: " + plugin.name);
                 success = false;
               }
               if (actualValue != null) {
@@ -850,9 +849,9 @@ public class PackageManager implements Closeable {
                         pkg.parameterDefaults,
                         collectionParameterOverrides,
                         systemParams);
-                printGreen("Actual: " + actualValue + ", expected: " + expectedValue);
+                runtime.printSuccess("Actual: " + actualValue + ", expected: " + expectedValue);
                 if (!expectedValue.equals(actualValue)) {
-                  printRed("Failed to deploy plugin: " + plugin.name);
+                  runtime.printError("Failed to deploy plugin: " + plugin.name);
                   success = false;
                 }
               }
@@ -931,7 +930,7 @@ public class PackageManager implements Closeable {
     boolean pegToLatest = PackageUtils.LATEST.equals(version);
     SolrPackageInstance packageInstance = getPackageInstance(packageName, version);
     if (packageInstance == null) {
-      printRed(
+      runtime.printError(
           "Package instance doesn't exist: "
               + packageName
               + ":"
@@ -942,7 +941,7 @@ public class PackageManager implements Closeable {
 
     Manifest manifest = packageInstance.manifest;
     if (!SolrVersion.LATEST.satisfies(manifest.versionConstraint)) {
-      printRed(
+      runtime.printError(
           "Version incompatible! Solr version: "
               + SolrVersion.LATEST
               + ", package version constraint: "
@@ -959,8 +958,11 @@ public class PackageManager implements Closeable {
             Arrays.asList(collections),
             shouldInstallClusterPlugins,
             parameters);
-    PackageUtils.print(
-        res ? CLIUtils.GREEN : CLIUtils.RED, res ? "Deployment successful" : "Deployment failed");
+    if (res) {
+      runtime.printSuccess("Deployment successful");
+    } else {
+      runtime.printError("Deployment failed");
+    }
   }
 
   /** Undeploys a package from given collections. */
@@ -974,7 +976,7 @@ public class PackageManager implements Closeable {
       SolrPackageInstance deployedPackage =
           getPackagesDeployedAsClusterLevelPlugins().get(packageName);
       if (deployedPackage == null) {
-        printRed("Cluster level plugins from package " + packageName + " not deployed.");
+        runtime.printError("Cluster level plugins from package " + packageName + " not deployed.");
       } else {
         for (Plugin plugin : deployedPackage.plugins) {
           if (!shouldUndeployClusterPlugins || !"cluster".equalsIgnoreCase(plugin.type)) continue;
@@ -1000,7 +1002,7 @@ public class PackageManager implements Closeable {
                 String path =
                     PackageUtils.resolve(
                         cmd.path, deployedPackage.parameterDefaults, Map.of(), systemParams);
-                printGreen("Executing " + payload + " for path:" + path);
+                runtime.printSuccess("Executing " + payload + " for path:" + path);
                 SolrCLI.postJsonToSolr(solrClient, path, payload);
               } catch (Exception ex) {
                 throw new SolrException(ErrorCode.SERVER_ERROR, ex);
@@ -1010,7 +1012,8 @@ public class PackageManager implements Closeable {
                   ErrorCode.BAD_REQUEST, "Non-POST method not supported for uninstall commands");
             }
           } else {
-            printRed("There is no uninstall command to execute for plugin: " + plugin.name);
+            runtime.printError(
+                "There is no uninstall command to execute for plugin: " + plugin.name);
           }
         }
       }
@@ -1019,7 +1022,7 @@ public class PackageManager implements Closeable {
     for (String collection : collections) {
       SolrPackageInstance deployedPackage = getPackagesDeployed(collection).get(packageName);
       if (deployedPackage == null) {
-        printRed("Package " + packageName + " not deployed on collection " + collection);
+        runtime.printError("Package " + packageName + " not deployed on collection " + collection);
         continue;
       }
       Map<String, String> collectionParameterOverrides = getPackageParams(packageName, collection);
@@ -1056,7 +1059,7 @@ public class PackageManager implements Closeable {
                       deployedPackage.parameterDefaults,
                       collectionParameterOverrides,
                       systemParams);
-              printGreen("Executing " + payload + " for path:" + path);
+              runtime.printSuccess("Executing " + payload + " for path:" + path);
               SolrCLI.postJsonToSolr(solrClient, path, payload);
             } catch (Exception ex) {
               throw new SolrException(ErrorCode.SERVER_ERROR, ex);
@@ -1066,7 +1069,7 @@ public class PackageManager implements Closeable {
                 ErrorCode.BAD_REQUEST, "Non-POST method not supported for uninstall commands");
           }
         } else {
-          printRed("There is no uninstall command to execute for plugin: " + plugin.name);
+          runtime.printError("There is no uninstall command to execute for plugin: " + plugin.name);
         }
       }
 
